crates/toml/tests/snapshots/invalid/string/multiline-lit-no-close-04.stderr
TOML parse error at line 3, column 8
  |
3 | gee ''
  |        ^
invalid multi-line literal string, expected `'`
